Code cleanup before conversion to C.